# herness

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PROGRESS.md  README.md
.cursor/rules/: harness-engineering.mdc
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  .importlinter  AGENTS.md  mypy.ini  pyproject.toml  ruff.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/logic/: __init__.py
backend/app/models/: __init__.py  item.py
backend/app/services/: __init__.py
backend/app/validators/: __init__.py
backend/tests/: test_schema.py
docs/: architecture.md  product-spec.md  project-map.md  sprint-backlog.md
docs/harness/: driver-prompt.md  failure-log.md  multi-agent.md
frontend/: .dependency-cruiser.js  .gitignore  AGENTS.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
scripts/: entropy-gardener.sh  session-checkpoint.sh  session-start.sh  verify.sh
